--- a/style.css
+++ b/style.css
@@ -126,3 +126,41 @@ legend {
     padding: 0px 50px 0px 20px;
     border-radius: 15px;
 }
+
+
+/* Novas adições */
+
+.separador{
+    margin-top: 30px;
+    width: 30px;
+    height: 30px;
+}
+
+.barra{
+    width: 550%;
+    height: 2px;
+    background-color: white;
+    margin: 8px auto;
+    transition-duration: 0.5s;
+}
+
+.barra-lista{
+    width: 80%;
+    height: 2px;
+    background-color: white;
+    margin: 8px auto;
+    transition-duration: 0.5s;
+}
+
+#dev-mode{
+    color: white;
+    font-size: 26px;
+    cursor: text;
+}
+
+.tabelas{
+    display: flex;
+    flex-direction: row;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
